	  between pages at the statusbar prompt.  Changes to
	  do_statusbar_mouse(), reset_statusbar_cursor(),
	  update_statusbar_line(), and
	  need_statusbar_horizontal_update(). (DLR)
	- Change slang curses emulation support to turn off the same
	  options as --enable-tiny, as it's hopelessly broken otherwise.
	  Changes to configure.ac, doc/texinfo/nano.texi, and
	  terminal_init(). (DLR)
- chars.c:
  nstrncasecmp(), mbstrncasecmp()
	- For efficiency, return zero immediately if s1 and s2 point to
	  the same string. (DLR)
  nstrcasestr(), mbstrcasestr(), revstrstr(), revstrcasestr(),
  mbrevstrcasestr()
	- For efficiency, return haystack immediately if
	  needle/rev_start is blank. (DLR)
	- Return char* instead of const char*. (DLR)
	- Simplify and rewrite to use the strncasecmp() equivalents.
	  (DLR)
- files.c:
  read_file()
	- Improve autodetection of DOS and Mac format files to not
	  trigger on carriage returns in the middle of files. (DLR,
	  found by Kjell Braden)
  do_insertfile()
	- Make sure the mark is always properly positioned after
	  inserting a file with the mark on. (DLR)
  copy_file()
	- Assert that inn and out don't both point to the same file.
	  (DLR)
  username_tab_completion(), cwd_tab_completion(), input_tab()
	- Update copyright notice to account for modifications. (DLR)
  username_tab_completion()
	- Rename variable buflen to buf_len, for consistency. (DLR)
  cwd_tab_completion()
	- Remove unneeded assert. (DLR)
	- Rename variable buflen to buf_len, for consistency. (DLR)
  input_tab()
	- Disable completion of usernames, directories, and filenames
	  if the cursor isn't at the end of the line, as it can lead to
	  odd behavior (e.g. adding a copy of the entire match to the
	  middle of the line instead of just the uncompleted part of the
	  match). (DLR)
- nano.c:
  print_opt_full()
	- Use strlenpt() instead of strlen(), so that tabs are placed
	  properly when displaying translated strings in UTF-8. (DLR,
	  found by Jean-Philippe Guérard)